<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserInterfaceViews.DrawingEditor">

    <com.example.pablotrescoli.peakshapesplayer.UserInterfaceViews.CustomObjects.CustomView
        android:id="@+id/customview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.3"
        android:background="@color/color2"
        android:contentDescription="canvas" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/control_panel"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/squareBtn"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/circle"
                android:src="@drawable/square_transp"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/circleBtn"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/circle"
                android:src="@drawable/circle_transp"
                android:textColor="@color/black" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/triangleBtn"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/triangle"
                android:src="@drawable/triangle_transpa"
                android:textColor="@color/black" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:background="@color/control_panel"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/undoBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@drawable/action_btn"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/undo"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/scoreDisp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@drawable/display_view"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/initial_score"
            android:textColor="@color/white"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/statsBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@drawable/action_btn"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/stats"
            android:textColor="@color/black" />


    </LinearLayout>

</LinearLayout>